--- a/Notebooks/content_analysis.ipynb
+++ b/Notebooks/content_analysis.ipynb
@@ -363,6 +363,7 @@
     }
    ],
    "source": [
+    "# Instantiate the Word2Vec model\n",
     "model_w2v = Word2Vec(\n",
     "    sentences, \n",
     "    window = 5, \n",
@@ -371,6 +372,7 @@
     "    alpha = 0.02\n",
     ")\n",
     "\n",
+    "# Train the model\n",
     "model_w2v.train(\n",
     "    sentences,\n",
     "    total_examples = model_w2v.corpus_count,\n",
@@ -380,31 +382,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[('suficientemente', 0.6477913856506348),\n",
-       " ('persona', 0.6433247327804565),\n",
-       " ('optica', 0.6243852972984314),\n",
-       " ('camino', 0.6168689131736755),\n",
-       " ('conocida', 0.6158979535102844),\n",
-       " ('parecia', 0.6029360890388489),\n",
-       " ('futuro', 0.6006138324737549),\n",
-       " ('ser', 0.5975983738899231),\n",
-       " ('decision', 0.5933517217636108),\n",
-       " ('intentar', 0.5886868238449097)]"
-      ]
-     },
-     "execution_count": 349,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matematicas: bastante, buena, tesis, real, descubri, pregrado, estudio, carrera, formas, profesor\n",
+      "vida: suficientemente, persona, optica, camino, conocida, parecia, futuro, ser, decision, intentar\n",
+      "futuro: recordar, decisiones, pequeno, formas, alla, tristeza, merece, cambio, unica, ojos\n"
+     ]
     }
    ],
    "source": [
-    "model_w2v.wv.most_similar('vida')"
+    "words_to_analyze = [\n",
+    "    'matematicas',\n",
+    "    'vida',\n",
+    "    'futuro'\n",
+    "]\n",
+    "for word in words_to_analyze:\n",
+    "    similar_words = [word[0] for word in model_w2v.wv.most_similar(word)]\n",
+    "    print('{}: {}'.format(word, ', '.join(similar_words)))"
    ]
   },
   {
