--- a/Notebooks/content_analysis.ipynb
+++ b/Notebooks/content_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "<AxesSubplot:xlabel='Samples', ylabel='Counts'>"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +244,9 @@
     "lda_model = gensim.models.LdaMulticore(\n",
     "    corpus = corpus,\n",
     "    id2word = id2word,\n",
-    "    num_topics = n_topics\n",
+    "    num_topics = n_topics,\n",
+    "    minimum_probability=0.001,\n",
+    "    iterations=200\n",
     ")"
    ]
   },
@@ -257,9 +259,9 @@
      "data": {
       "text/plain": [
        "[(0,\n",
-       "  '0.004*\"datos\" + 0.003*\"hoy\" + 0.003*\"vida\" + 0.002*\"hecho\" + 0.002*\"personas\" + 0.002*\"cosas\" + 0.002*\"bastante\" + 0.002*\"realmente\" + 0.002*\"dos\" + 0.002*\"debe\"'),\n",
+       "  '0.004*\"datos\" + 0.003*\"bastante\" + 0.003*\"matematicas\" + 0.003*\"funcion\" + 0.003*\"cosas\" + 0.002*\"punto\" + 0.002*\"dos\" + 0.002*\"hoy\" + 0.002*\"caso\" + 0.002*\"vida\"'),\n",
        " (1,\n",
-       "  '0.003*\"vida\" + 0.002*\"cosas\" + 0.002*\"personas\" + 0.002*\"aun\" + 0.002*\"datos\" + 0.002*\"funcion\" + 0.002*\"matematicas\" + 0.002*\"hoy\" + 0.002*\"realmente\" + 0.002*\"dos\"')]"
+       "  '0.003*\"vida\" + 0.003*\"hoy\" + 0.003*\"personas\" + 0.003*\"hecho\" + 0.003*\"datos\" + 0.002*\"realmente\" + 0.002*\"aun\" + 0.002*\"aunque\" + 0.002*\"anos\" + 0.002*\"tiempo\"')]"
       ]
      },
      "execution_count": 19,
