--- a/Notebooks/content_analysis.ipynb
+++ b/Notebooks/content_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -159,7 +159,7 @@
        "<AxesSubplot:xlabel='Samples', ylabel='Counts'>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
     "\n",
     "# Obtain the topics. We'll use LDA and just 2 topics\n",
     "n_topics = 2\n",
-    "lda_model = gensim.models.LdaMulticore(\n",
+    "LDA_gensim = gensim.models.LdaMulticore(\n",
     "    corpus = corpus,\n",
     "    id2word = id2word,\n",
     "    num_topics = n_topics,\n",
@@ -252,26 +252,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[(0,\n",
-       "  '0.004*\"datos\" + 0.003*\"bastante\" + 0.003*\"matematicas\" + 0.003*\"funcion\" + 0.003*\"cosas\" + 0.002*\"punto\" + 0.002*\"dos\" + 0.002*\"hoy\" + 0.002*\"caso\" + 0.002*\"vida\"'),\n",
-       " (1,\n",
-       "  '0.003*\"vida\" + 0.003*\"hoy\" + 0.003*\"personas\" + 0.003*\"hecho\" + 0.003*\"datos\" + 0.002*\"realmente\" + 0.002*\"aun\" + 0.002*\"aunque\" + 0.002*\"anos\" + 0.002*\"tiempo\"')]"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Topic 0: 0.004*\"datos\" + 0.003*\"funcion\" + 0.003*\"personas\" + 0.002*\"hoy\" + 0.002*\"dos\" + 0.002*\"bastante\" + 0.002*\"anos\" + 0.002*\"estudiantes\" + 0.002*\"vector\" + 0.002*\"existe\"\n",
+      "Topic 1: 0.003*\"vida\" + 0.003*\"cosas\" + 0.003*\"realmente\" + 0.003*\"hoy\" + 0.003*\"matematicas\" + 0.003*\"hecho\" + 0.003*\"datos\" + 0.003*\"aun\" + 0.002*\"idea\" + 0.002*\"probabilidad\"\n"
+     ]
     }
    ],
    "source": [
     "# Print the final topics\n",
-    "lda_model.print_topics()"
+    "n_words = 10\n",
+    "for i, topic in enumerate(LDA_gensim.show_topics(num_topics=n_topics, num_words=n_words)):\n",
+    "    print(f'Topic {i}: {topic[1]}')"
    ]
   },
   {
@@ -283,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +290,7 @@
        "                          max_iter=50, n_components=2, random_state=0)"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +308,7 @@
     ")\n",
     "\n",
     "dtm = cv.fit_transform(df['clean_text'])\n",
-    "LDA = LatentDirichletAllocation(n_components = n_topics, \n",
+    "LDA_sklearn = LatentDirichletAllocation(n_components = n_topics, \n",
     "    max_iter = 50, \n",
     "    learning_method = 'online', \n",
     "    learning_offset = 10., \n",
@@ -320,12 +317,12 @@
     ")\n",
     "\n",
     "# Fit model\n",
-    "LDA.fit(dtm)\n"
+    "LDA_sklearn.fit(dtm)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -335,12 +332,20 @@
       "Topic 0: hecho, probabilidad, idea, bastante, funcion, siguiente, cierto, numero, matematicas, datos\n",
       "Topic 1: hoy, pais, vida, hacia, personas, ciencia, aunque, borges, libro, aun\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/carlosandresosorioalcalde/opt/anaconda3/lib/python3.8/site-packages/sklearn/utils/deprecation.py:87: FutureWarning: Function get_feature_names is deprecated; get_feature_names is deprecated in 1.0 and will be removed in 1.2. Please use get_feature_names_out instead.\n",
+      "  warnings.warn(msg, category=FutureWarning)\n"
+     ]
     }
    ],
    "source": [
-    "# Print the words for each topic\n",
-    "for index in range(len(LDA.components_)):\n",
-    "    topic = LDA.components_[index]\n",
+    "# Print the relevant words for each topic\n",
+    "for index in range(len(LDA_sklearn.components_)):\n",
+    "    topic = LDA_sklearn.components_[index]\n",
     "    top_ten_words = topic.argsort()[-10:]\n",
     "    topic_words = [cv.get_feature_names()[i] for i in top_ten_words]\n",
     "    print('Topic {}: {}'.format(index, ', '.join(topic_words)))"
@@ -355,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -374,7 +379,7 @@
        "(903326, 1747800)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -399,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -407,7 +412,7 @@
      "output_type": "stream",
      "text": [
       "matematicas: tesis, real, bastante, estudio, belleza, contradiccion, rigurosa, parecia, pregrado, buena\n",
-      "vida: persona, conocida, unica, suficientemente, decisiones, pregrado, futuro, camino, trae, buena\n"
+      "vida: persona, conocida, unica, suficientemente, decisiones, futuro, pregrado, camino, trae, pense\n"
      ]
     }
    ],
