--- a/Notebooks/content_analysis.ipynb
+++ b/Notebooks/content_analysis.ipynb
@@ -265,7 +265,8 @@
     }
    ],
    "source": [
-    "# Print the final topics\n",
+    "# Print the topics and the top words for each one\n",
+    "\n",
     "n_words = 10\n",
     "for i, topic in enumerate(LDA_gensim.show_topics(num_topics=n_topics, num_words=n_words)):\n",
     "    print(f'Topic {i}: {topic[1]}')"
@@ -343,10 +344,12 @@
     }
    ],
    "source": [
-    "# Print the relevant words for each topic\n",
+    "# Print the topics and the top words for each one\n",
+    "n_words = 10\n",
+    "\n",
     "for index in range(len(LDA_sklearn.components_)):\n",
     "    topic = LDA_sklearn.components_[index]\n",
-    "    top_ten_words = topic.argsort()[-10:]\n",
+    "    top_ten_words = topic.argsort()[-n_words:]\n",
     "    topic_words = [cv.get_feature_names()[i] for i in top_ten_words]\n",
     "    print('Topic {}: {}'.format(index, ', '.join(topic_words)))"
    ]
@@ -417,6 +420,7 @@
     }
    ],
    "source": [
+    "# Print the most similar words for the following element in my list\n",
     "words_to_analyze = [\n",
     "    'matematicas',\n",
     "    'vida'\n",
